Updated kanban: Allowed kanban cards to be draggable in touch screen

--- a/f/src/c/kanban/kanbanCard.css
+++ b/f/src/c/kanban/kanbanCard.css
@@ -6,6 +6,7 @@ div.kanban-card-overlay{
     /* background: grey; */
     margin: 5px;
     width: 100%;
+    touch-action: none;
 }
 
 div.kanban-card-overlay:hover{
