Updated planner page: Created a beta version of new feature bulk mode. This allows users to move the scheduled dates for multiple tasks at a the same time.

--- a/f/src/c/plannerPage/dateCard.css
+++ b/f/src/c/plannerPage/dateCard.css
@@ -11,7 +11,6 @@ div.planner-date-container{
 
 div.planner-date-container-header-row{
     display: flex;
-    justify-content: space-around;
     /* border: 1px solid; */
 }
 
@@ -20,7 +19,7 @@ div.planner-date-container-header-row div.side-btn{
 }
 
 div.planner-date-container-header-row div.add-task-entity{
-    visibility: hidden;;
+    visibility: visible;
     margin: 0 2px 0 5px;
 }
 
